--- a/css/list.css
+++ b/css/list.css
@@ -6,6 +6,7 @@
     border-collapse: collapse;
     width: 100%;
     box-sizing: inherit;
+    table-layout: fixed;
 }
 
 #mainTable td {
@@ -70,12 +71,12 @@ p{
 	text-decoration:none;
 	text-shadow:0px 1px 0px #273d66;
 }
+
 #updateButton:hover {
 	background-color:#2a70bf;
 }
+
 #updateButton:active {
 	position:relative;
 	top:1px;
 }
-
-td { word-wrap: break-word; }
